Fix sandboxed curl integration and related tests
The curl integration was not properly instrumenting curl_copy_handle
and not all functions respected ddtrace_config_distributed_tracing_enabled.

Rename lib/configuration.php -> lib/function.php
Tell phpstan about lib/function.php

Reload configuration changes during test shutdown;
we've had a number of issues because configuration changes from
one test bleed into another test. Adding this to our base
IntegrationTestCase should help cut down on this.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,6 @@
 parameters:
+	autoload_files:
+		- lib/function.php
 	excludes_analyse:
 		- src/DDTrace/Bootstrap.php
 		- src/DDTrace/Util/CodeTracer.php
