--- a/package.xml
+++ b/package.xml
@@ -32,6 +32,7 @@
                     <file name="arrays.c" role="src" />
                     <file name="arrays.h" role="src" />
                     <file name="auto_flush.h" role="src" />
+                    <file name="blacklist.h" role="src" />
                     <file name="clocks.c" role="src" />
                     <file name="clocks.h" role="src" />
                     <file name="comms_php.c" role="src" />
@@ -90,12 +91,14 @@
                     </dir>
                     <dir name="php5">
                         <file name="auto_flush.c" role="src" />
+                        <file name="blacklist.c" role="src" />
                         <file name="dispatch.c" role="src" />
                         <file name="engine_hooks.c" role="src" />
                         <file name="handlers_curl.c" role="src" />
                     </dir>
                     <dir name="php7">
                         <file name="auto_flush.c" role="src" />
+                        <file name="blacklist.c" role="src" />
                         <file name="dispatch.c" role="src" />
                         <file name="engine_api.c" role="src" />
                         <file name="engine_api.h" role="src" />
@@ -118,7 +121,6 @@
                         <file name="error_get_last_is_unaffected.phpt" role="test" />
                         <file name="raises_e_notice.php" role="test" />
                         <file name="raises_fatal_error.php" role="test" />
-                        <file name="request_init_hook_check_blacklisted_modules.phpt" role="test" />
                         <file name="request_init_hook_confined_to_open_basedir.phpt" role="test" />
                         <file name="request_init_hook_file_not_found.phpt" role="test" />
                         <file name="request_init_hook_ignores_exceptions.phpt" role="test" />
