--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
                     <file name="coms.c" role="src" />
                     <file name="coms.h" role="src" />
                     <file name="handlers_curl.h" role="src" />
+                    <file name="handlers_pdo.h" role="src" />
                     <file name="macros.h" role="src" />
                     <file name="ddtrace.c" role="src" />
                     <file name="ddtrace.h" role="src" />
@@ -91,6 +92,7 @@
                         <file name="dispatch.c" role="src" />
                         <file name="engine_hooks.c" role="src" />
                         <file name="handlers_curl.c" role="src" />
+                        <file name="handlers_pdo.c" role="src" />
                     </dir>
                     <dir name="php7">
                         <file name="auto_flush.c" role="src" />
@@ -99,6 +101,7 @@
                         <file name="engine_api.h" role="src" />
                         <file name="engine_hooks.c" role="src" />
                         <file name="handlers_curl.c" role="src" />
+                        <file name="handlers_pdo.c" role="src" />
                     </dir>
                     <dir name="third-party">
                         <file name="mt19937-64.c" role="src" />
